Tooltip: fixed background color

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -407,7 +407,7 @@ permalink: /selectors
 
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Privacy Policy <div class="inline-action primary animate-fly-in-left JS_has-popup--tooltip JS_has-popup" data-popid="#ms-privacy"></div></div>
+      <div class="field__label">Privacy Policy <div class="inline-action primary animate-fly-in-left JS_has-popup" data-popid="#ms-privacy"></div></div>
       <div class="field__data">
 
         <div class="field__value">
