--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -87,14 +87,14 @@ permalink: /selectors
 
     <div class="comment-field">
       <div class="comment-field__action comment-field__attach">
-        <div class="inline-action"><input name="upload" type="file" class="file-input" tabindex="-1"></div>
+        <div class="inline-action primary"><input name="upload" type="file" class="file-input" tabindex="-1"></div>
       </div>
       <div class="comment-field__input comment-field__input--empty">
         <textarea placeholder="Use @ to notify person"></textarea>
-        <div class="fake-input fake-input-nohtml"></div>
+        <div class="fake-input"></div>
       </div>
       <div class="comment-field__action comment-field__send opacity-0">
-        <div class="inline-action"></div>
+        <div class="inline-action primary"></div>
       </div>
     </div>
 
@@ -108,10 +108,10 @@ permalink: /selectors
           <div class="comment-field__attachment-label h2 hidden">jpg</div>
         </a>
         <textarea placeholder="Use @ to notify person">Please read acceptence criterias,</textarea>
-        <div class="fake-input fake-input-nohtml">Please read acceptence criterias,</div>
+        <div class="fake-input">Please read acceptence criterias,</div>
       </div>
       <div class="comment-field__action comment-field__send opacity-0">
-        <div class="inline-action"></div>
+        <div class="inline-action primary"></div>
       </div>
     </div>
 
@@ -124,7 +124,7 @@ permalink: /selectors
         <div class="fake-input"></div>
       </div>
       <div class="comment-field__action comment-field__send opacity-0">
-        <div class="inline-action"></div>
+        <div class="inline-action primary"></div>
       </div>
     </div>
 
@@ -166,34 +166,160 @@ permalink: /selectors
   <div class="sm:w-1/2 p-8 overflow-hidden">
     <h2 class="mb-8">Test comment/att posts</h2>
 
-    <div id="comments-container">
+    <div class="relative">
 
-      <div class="comment-post">
-        <div class="comment-post__label">
-          <div class="h8"><span class="primary inline-action">Nick De Jaeger</span> at <span>14:60</span></div>
+      <div class="comment-field JS_comment_post">
+        <div class="comment-field__action comment-field__attach">
+          <div class="inline-action primary"><input name="upload" type="file" class="file-input" tabindex="-1"></div>
         </div>
-        <div class="comment-post__value">
-          <div class="comment-post__bubble">
-            <div class="comment-post__bubble-message">
-              <a href="#" class="inline-action">@jetro</a> Send me screenshot please
+        <div class="comment-field__input comment-field__input--empty">
+          <textarea placeholder="Use @ to notify person"></textarea>
+          <div class="fake-input"></div>
+        </div>
+        <div class="comment-field__action comment-field__send opacity-0">
+          <div class="inline-action primary"></div>
+        </div>
+      </div>
+
+      <div id="comments-container">
+
+        <!--
+          @source: https://tracker.tenforce.com/workspace/383/83172f/561531#commentsAndAttachments
+        -->
+
+        <div class="comments-seperator">
+          <span class="h8">Last month</span>
+        </div>
+
+        <div class="comment-post comment-post--self">
+          <div class="comment-post__label">
+            <div class="h8 text-grey-dark"><span class="inline-action primary">Jan Van den Nieuwenhof</span> at <span>06/06/2018</span> <span>10:15</span></div>
+          </div>
+          <div class="comment-post__value">
+            <div class="comment-post__bubble">
+              <div class="comment-post__bubble-message">
+                <a href="#" class="inline-action primary">@Sara</a>, <a href="#" class="inline-action primary">@Kasper</a>,<br>
+                idem voor deze. Deze mag bijna afgesloten worden (nog een upload of iets dergelijks)<br>
+                Beter dat dit bij iemand zit , anders verdwijnt dit van de to-do lijstjes
+              </div>
+            </div>
+            <div class="comment-post__action">
+              <div class="inline-action primary"></div>
             </div>
           </div>
         </div>
-      </div>
 
-    </div>
+        <div class="comments-seperator">
+          <span class="h8">Last year</span>
+        </div>
 
-    <div class="comment-field JS_comment_post">
-      <div class="comment-field__action comment-field__attach">
-        <div class="inline-action"><input name="upload" type="file" class="file-input" tabindex="-1"></div>
-      </div>
-      <div class="comment-field__input comment-field__input--empty">
-        <textarea placeholder="Use @ to notify person"></textarea>
-        <div class="fake-input fake-input-nohtml"></div>
-      </div>
-      <div class="comment-field__action comment-field__send opacity-0">
-        <div class="inline-action"></div>
-      </div>
+        <div class="comment-post">
+          <div class="comment-post__label">
+            <div class="h8 text-grey-dark"><span class="inline-action primary">André Terhorst</span> at <span>15/07/2017</span> <span>13:40</span></div>
+          </div>
+          <div class="comment-post__value">
+            <div class="comment-post__bubble">
+              <div class="comment-post__bubble-message">
+                <a href="#" class="inline-action primary">@Nathalie</a>, <a href="#" class="inline-action primary">@Jan</a>,<br>
+                Ja normaal mag dit naar projecten, maar laat voorlopig nog maar even staan als SR.<br>
+                Er zijn nog een aantal SR's die we misschien hiermee kunnen combineren in 1 project, maar Lanxess heeft aangegeven dat deze nog niet voor korte termijn zijn.<br>
+                Zodra ze concreet bestellen kunnen we er dan een project van maken.
+              </div>
+            </div>
+            <div class="comment-post__action">
+              <div class="inline-action unselected"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="comment-post comment-post--history">
+          <div class="comment-post__label">
+            <div class="h8 text-grey-dark"><span class="inline-action primary">System Administrator</span> at <span>08/09/2017</span> <span>13:31</span></div>
+          </div>
+          <div class="comment-post__value">
+            <div class="comment-post__bubble">
+              <div class="comment-post__bubble-message">
+                Set status from examined to confirmed
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="comment-post">
+          <div class="comment-post__label">
+            <div class="h8 text-grey-dark"><span class="inline-action primary">Nathalie Poot</span> at <span>15/07/2017</span> <span>12:46</span></div>
+          </div>
+          <div class="comment-post__value">
+            <div class="comment-post__bubble">
+              <div class="comment-post__bubble-message">
+                <a href="#" class="inline-action primary">@André</a>, <a href="#" class="inline-action primary">@Jan</a>,<br>
+                <br>
+                Dit staat bij de service requests, maar moet dit niet verschoven worden naar projecten (omw van het aantal MD)?<br>
+                <br>
+                Dank je<br>
+                <br>
+                groetjes
+              </div>
+            </div>
+            <div class="comment-post__action">
+              <div class="inline-action unselected"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="comment-post comment-post--self">
+          <div class="comment-post__label">
+            <div class="h8 text-grey-dark"><span class="inline-action primary">Jan Van den Nieuwenhof</span> at <span>11/05/2017</span> <span>15:29</span></div>
+          </div>
+          <div class="comment-post__value">
+            <div class="comment-post__bubble">
+              <div class="comment-post__bubble-message">
+                <a href="#" class="inline-action primary">@Sandra</a>, <a href="#" class="inline-action primary">@Hugo</a>,<br>
+                <br>
+                Inderdaad ik zou er dit van maken<br>
+                <br>
+                7 dagen config + scripting<br>
+                2 dagen follow-up en pm<br>
+                1 dag installatie en productie support<br>
+                in regie - excel import afhankelijk van excels en formaten (tss 4 - 8 dagen?)<br>
+                <br>
+                mvg<br>
+                Jan
+              </div>
+            </div>
+            <div class="comment-post__action">
+              <div class="inline-action primary"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="comment-post">
+          <div class="comment-post__label">
+            <div class="h8 text-grey-dark"><span class="inline-action primary">Sandra Ghysels</span> at <span>09/05/2017</span> <span>10:45</span></div>
+          </div>
+          <div class="comment-post__value">
+            <div class="comment-post__bubble">
+              <div class="comment-post__bubble-message">
+                <a href="#" class="inline-action primary">@jan_van_den_nieuwenhof</a>, <a href="#" class="inline-action primary">@hugo_daninck</a>,<br>
+                <br>
+                vraag van Lanxess voor fixed price implementatie van "Asbest"<br>
+                <br>
+                Ingesloten hun specs (pdf) en mijn voorstel (doc), ik kom op 7 dagen config + scripting, mag nog wat pm over + testing<br>
+                <br>
+                Graag inschatting bekijken want ze willen fixed price omdat iAdvise ook fixed price heeft voorgesteld.<br>
+                NIet vergeten dat er ook nog een 8 of 10 dagen bij kwam voor de import van de xls files per bedrijf, die heb ik er niet bijgezet want ik weet niet meer of het 8 of 10 bedrijven zijn.<br>
+                <br>
+                Sandra
+              </div>
+            </div>
+            <div class="comment-post__action">
+              <div class="inline-action text-green disabled"></div>
+            </div>
+          </div>
+        </div>
+
+      </div><!-- /#comments-container -->
+
     </div>
 
   </div>
@@ -275,6 +401,19 @@ permalink: /selectors
         'height': fakeInput.height() + 'px'
       });
     });
+
+    $('.comment-post__bubble').each(function() {
+      if ( $(this).height() >= 200 ) {
+        $(this).addClass('comment-post__bubble--overflow');
+
+        $(this).append('<div class="readmore JS_readmore"></div>')
+      }
+      else {
+        $(this).removeClass('comment-post__bubble--overflow');
+
+        $(this).find('.readmore').remove();
+      }
+    });
   }
 
   function checkContentInput() {
@@ -290,7 +429,7 @@ permalink: /selectors
           // turn @<notified> into links
           if (notified != null && notified.length > 0) {
             for (var i = 0; i < notified.length; i++) {
-              newval = newval.replace(notified[i], '</span><a href="#'+notified[i]+'" class="inline-action">' + notified[i] + '</a><span>');
+              newval = newval.replace(notified[i], '</span><a href="#'+notified[i]+'" class="inline-action primary">' + notified[i] + '</a><span>');
             }
           }
           newval = newval.replace(newval, '<span>' + newval + '</span>');
@@ -315,13 +454,16 @@ permalink: /selectors
       var textarea = $(this).closest('.comment-field').find('.comment-field__input textarea');
       var notified = textarea[0].value.match(/@[a-z]+/gi);
       var newval = textarea[0].value;
-      var time = new Date().toLocaleTimeString('en-US', { hour12: false, hour: "numeric", minute: "numeric", second: "numeric"});
+      var day = new Date().getDate();
+      var month = new Date().getMonth();
+      var year = new Date().getFullYear();
+      var time = new Date().toLocaleTimeString('en-US', { hour12: false, hour: "numeric", minute: "numeric"});
 
       if ( textarea.val().length > 0 ) {
         // turn @<notified> into links
         if (notified != null && notified.length > 0) {
           for (var i = 0; i < notified.length; i++) {
-            newval = newval.replace(notified[i], '</span><a href="#'+notified[i]+'" class="inline-action">' + notified[i] + '</a><span>');
+            newval = newval.replace(notified[i], '</span><a href="#'+notified[i]+'" class="inline-action primary">' + notified[i] + '</a><span>');
           }
         }
 
@@ -329,7 +471,7 @@ permalink: /selectors
           $('#comments-container').prepend(
             '<div class="comment-post comment-post--self">' +
               '<div class="comment-post__label">' +
-                '<div class="h8"><span class="primary inline-action">Jetro Wils</span> at <span>' + time + '</span></div>' +
+                '<div class="h8"><span class="inline-action primary">Jan Van den Nieuwenhof</span> at <span>' + day + '/' + month + '/' + year + '</span> <span>' + time + '</span></div>' +
               '</div>' +
               '<div class="comment-post__value">' +
                 '<div class="comment-post__bubble">' +
@@ -340,6 +482,9 @@ permalink: /selectors
                     newval +
                   '</div>' +
                 '</div>' +
+                '<div class="comment-post__action">' +
+                  '<div class="inline-action primary"></div>' +
+                '</div>' +
               '</div>' +
             '</div>'
           );
@@ -348,13 +493,16 @@ permalink: /selectors
           $('#comments-container').prepend(
             '<div class="comment-post comment-post--self">' +
               '<div class="comment-post__label">' +
-                '<div class="h8"><span class="primary inline-action">Jetro Wils</span> at <span>' + time + '</span></div>' +
+                '<div class="h8"><span class="inline-action primary">Jan Van den Nieuwenhof</span> at <span>' + day + '/' + month + '/' + year + '</span> <span>' + time + '</span></div>' +
               '</div>' +
               '<div class="comment-post__value">' +
                 '<div class="comment-post__bubble">' +
                   '<div class="comment-post__bubble-message">' +
                     newval +
                   '</div>' +
+                '</div>' +
+                '<div class="comment-post__action">' +
+                  '<div class="inline-action primary"></div>' +
                 '</div>' +
               '</div>' +
             '</div>'
@@ -377,6 +525,12 @@ permalink: /selectors
       }
 
       hasFile = false;
+    });
+  });
+
+  $('body').on('click', '.JS_readmore', function() {
+    $(this).closest('.comment-post__bubble').removeClass('comment-post__bubble--overflow').css({
+      'max-height': '100%'
     });
   });
 </script>
