--- a/pages/comments.html
+++ b/pages/comments.html
@@ -61,7 +61,7 @@ permalink: /comments
             <div class="comment-post__bubble-attachment-thumbnail" style="background-image:url('./assets/images/screenshot.png');"></div>
           </a>
           <div class="comment-post__bubble-message">
-            <a href="#" class="inline-action">@nickdejaeger</a> Important notes:
+            <a href="#" class="primary inline-action">@nickdejaeger</a> Important notes:
             <br><br>
             - Fixing integration tests: 30 tests failing<br>
             - We fixed 3 since yesterday<br>
@@ -79,7 +79,7 @@ permalink: /comments
       <div class="comment-post__value">
         <div class="comment-post__bubble">
           <div class="comment-post__bubble-message">
-            <a href="#" class="inline-action">@jetro</a> Send me screenshot please
+            <a href="#" class="primary inline-action">@jetro</a> Send me screenshot please
           </div>
         </div>
       </div>
