--- a/pages/font.html
+++ b/pages/font.html
@@ -82,40 +82,40 @@ permalink: /font
   <tbody>
     <tr>
       <td class="label">Regular</td>
-      <td class="ff-ssp regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-tf regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-ssp-tf regular highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-tf-ssp regular">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp regular"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf regular"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-tf regular highlight"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf-ssp regular"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     <tr>
       <td class="label">Bold</td>
-      <td class="ff-ssp bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-tf bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-ssp-tf bold highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-tf-ssp bold">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp bold"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf bold"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-tf bold highlight"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf-ssp bold"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     <!--
     <tr>
       <td class="label">italic</td>
-      <td class="ff-ssp italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-tf italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-ssp-tf italic highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-tf-ssp italic">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp italic"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf italic"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-tf italic highlight"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf-ssp italic"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     -->
     <tr>
       <td class="label">600</td>
-      <td class="ff-ssp w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-tf w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-ssp-tf w600 highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="ff-tf-ssp w600">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp w600"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf w600"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-ssp-tf w600 highlight"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="ff-tf-ssp w600"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
     <tr>
       <td class="last label">700</td>
-      <td class="last ff-ssp w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="last ff-tf w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="last ff-ssp-tf w700 highlight">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
-      <td class="last ff-tf-ssp w700">ܒ TenForce क<br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="last ff-ssp w700"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="last ff-tf w700"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="last ff-ssp-tf w700 highlight"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
+      <td class="last ff-tf-ssp w700"> TenForce <br>我要約 харагддаг ကြိုဆို ようこそ 歡迎</td>
     </tr>
   </tbody>
 </table>
