--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -84,6 +84,9 @@ permalink: /selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 px-4">
 
+  {% include components/selector.html selectorData="#0BDA51,,Labeltext,fieldtext"%}
+  {% include components/selector.html selectorData="#0BDA51,,Labeltext,fieldtext;,,Labeltext,fieldtext;,icon,Labeltext,fieldtext;,,,test;,,test,"%}
+
     <!-- Field -->
     <div class="field">
       <div class="field__label">Checkbox</div>
