--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -84,28 +84,13 @@ permalink: /selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 px-4">
 
-  {% include components/selector.html selectorData="#0BDA51,,Labeltext,fieldtext"%}
-  {% include components/selector.html selectorData="#0BDA51,,Labeltext,fieldtext;,,Labeltext,fieldtext;,icon,Labeltext,fieldtext;,,,test;,,test,"%}
-
     <!-- Field -->
     <div class="field">
       <div class="field__label">Checkbox</div>
       <div class="field__data">
 
         <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-          </div>
+          {% include components/selector.html selectorData="#0BDA51,,,;,,," expanded="true" singleselect="true" selectedIndex=1 %}
 
           <input class="field__input" type="text" value="checked">
         </div>
