--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -90,7 +90,7 @@ permalink: /selectors
       <div class="field__data">
 
         <div class="field__value">
-          {% include components/selector.html selectorData="#0BDA51,,,;,,," expanded="true" singleselect="true" selectedIndex=1 %}
+          {% include components/selector.html selectorData="#0BDA51,,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
           <input class="field__input" type="text" value="checked">
         </div>
 
@@ -154,7 +154,7 @@ permalink: /selectors
       <div class="field__data">
 
         <div class="field__value">
-        {% include components/selector.html selectorData=",,,Disagree;,,,Agree" expanded="true" singleselect="true" selectedIndex=1 %}
+        {% include components/selector.html selectorData=",,,Disagree;,,,Agree" expanded="true" singleselect="true" selectedIndexes="1" %}
 
           <span>with our <a href="#" class="link link--primary">Privacy Policiy</a>.</span>
 
@@ -315,7 +315,7 @@ permalink: /selectors
       <div class="field__label">Danger level</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/selector.html selectorData="#0BDA51,Low,,;#F4CA16,Moderate,,;var(--color-red),High,," expanded="true" singleselect="true" selectedIndex=1 %}
+          {% include components/selector.html selectorData="#0BDA51,Low,,;#F4CA16,Moderate,,;var(--color-red),High,," expanded="true" singleselect="true" selectedIndexes="1" %}
           <input class="field__input" type="text" value="low">
 
         </div>
@@ -327,7 +327,7 @@ permalink: /selectors
       <div class="field__label">Product contact</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/selector.html selectorData="#F4CA16,,,Heet;var(--color-red),,,Brandbaar;var(--color-red),,,Huidopname" expanded="true" multiselect="true" selectedIndex=1 %}
+          {% include components/selector.html selectorData="#F4CA16,,,Heet;var(--color-red),,,Brandbaar;var(--color-red),,,Huidopname" expanded="true" multiselect="true" selectedIndexes="1" %}
 
           <input class="field__input" type="text" value="">
 
@@ -340,28 +340,7 @@ permalink: /selectors
       <div class="field__label">Status</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-                <div class="selector__blockPart selector__blockPart--field">Not started</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
-                <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: var(--color-red);"></div>
-                <div class="selector__blockPart selector__blockPart--field">Finished</div>
-              </div>
-            </div>
-          </div>
+          {% include components/selector.html selectorData="#0BDA51,,,Not started;#F4CA16,,,Ongoing;var(--color-red),,,Finished" expanded="true" singleselect="true" selectedIndexes="1" %}
 
           <input class="field__input" type="text" value="Not started">
         </div>
@@ -373,28 +352,7 @@ permalink: /selectors
       <div class="field__label">Tags</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--multiselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-                <div class="selector__blockPart selector__blockPart--field">dev-team</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
-                <div class="selector__blockPart selector__blockPart--field">back-end</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
-                <div class="selector__blockPart selector__blockPart--field">297</div>
-              </div>
-            </div>
-          </div>
+          {% include components/selector.html selectorData="#0BDA51,,,dev-team;#00BFFF,,,back-end;#F4CA16,,,297" expanded="true" multiselect="true" selectedIndexes="1,2,3" %}
 
           <input class="field__input" type="text" value="dev-team, back-end, 298">
         </div>
@@ -406,29 +364,7 @@ permalink: /selectors
       <div class="field__label">Status</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
-                <div class="selector__blockPart selector__blockPart--field">Not started</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
-                <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-                <div class="selector__blockPart selector__blockPart--field">Done</div>
-              </div>
-            </div>
-          </div>
-
+            {% include components/selector.html selectorData="#F4CA16,,,Not started;#00BFFF,,,Ongoing;#0BDA51,,,Done" expanded="true" singleselect="true" selectedIndexes="1" %}
           <input class="field__input" type="text" value="Ongoing">
         </div>
       </div>
@@ -439,20 +375,7 @@ permalink: /selectors
       <div class="field__label">Checkbox (filter in header)</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--multiselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field"></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field"></div>
-              </div>
-            </div>
-          </div>
-
+          {% include components/selector.html selectorData=",,,;,,," expanded="true" multiselect="true" selectedIndexes="1" %}
           <input class="field__input" type="text" value=", ">
         </div>
       </div>
@@ -463,19 +386,7 @@ permalink: /selectors
       <div class="field__label">Checkbox</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-          </div>
+          {% include components/selector.html selectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
 
           <input class="field__input" type="text" value="">
         </div>
@@ -484,35 +395,10 @@ permalink: /selectors
 
     <!-- Field -->
     <div class="field">
-      <div class="field__label">Checkbox</div>
+      <div class="field__label">Panel selector</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_toggle-progress">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item  JS_selectorItem JS_toggle-comments">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-          </div>
-
+          {% include components/selector.html selectorData=",,,;,<sup>11</sup>,,;,,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
           <input class="field__input" type="text" value="">
         </div>
       </div>
