--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -543,16 +543,7 @@ permalink: /selectors
     <div class="field">
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--expanded">
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-                <div class="selector__blockPart selector__blockPart--label">Label</div>
-                <div class="selector__blockSeperator"></div>
-                <div class="selector__blockPart selector__blockPart--field">Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</div>
-              </div>
-            </div>
-          </div>
+          {% include components/selector.html selectorData="#0BDA51,,Label,Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum" expanded="true" selectedIndexes="1" %}
 
           <input class="field__input" type="text" value="Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum" tabindex="-1">
         </div>
@@ -569,21 +560,7 @@ permalink: /selectors
       <div class="field__label">Tags</div>
       <div class="field__data">
         <div class="field__value">
-
-          <div class="selector selector--multiselect JS_has-popup JS_selector" data-popid="#multiSelector-tagpicker">
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-                <div class="selector__blockPart selector__blockPart--field">282</div>
-                <div class="selector__itemSeperator"></div>
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #F4CA16;"></div>
-                <div class="selector__blockPart selector__blockPart--field">2013_Maintenance</div>
-                <div class="selector__itemSeperator"></div>
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #E30022;"></div>
-                <div class="selector__blockPart selector__blockPart--field">workaround_available</div>
-              </div>
-            </div>
-          </div>
+          {% include components/selector-popup.html selectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#multiSelector-tagpicker" %}
 
           <input class="field__input" type="text" value="282, 2013_Maintenance, workaround_available">
         </div>
