tag selector uses normal selector and not selector-popup component

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -560,7 +560,7 @@ permalink: /selectors
       <div class="field__label">Tags</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/selector-popup.html selectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#multiSelector-tagpicker" %}
+          {% include components/selector.html selectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#multiSelector-tagpicker" %}
 
           <input class="field__input" type="text" value="282, 2013_Maintenance, workaround_available">
         </div>
