--- a/pages/drag.html
+++ b/pages/drag.html
@@ -3,56 +3,7 @@ layout: drag
 title: Drag
 permalink: /drag
 ---
-
-<style>
-  @keyframes dashed-border-spinner {
-    100% {
-      background-position: 100% 100%;
-    }
-  }
-
-  .selector--draggable {
-    margin: 5px;
-    cursor: move;
-    pointer-events: all;
-    transition: all .3s ease-in-out;
-    border-color: transparent;
-    background-size: 200% 200%;
-    background-image: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 5px, rgba(0, 0, 0, .1) 5px, rgba(0, 0, 0, 0.1) 10px);
-  }
-
-  .selector--draggable .selector__item {
-    cursor: move;
-  }
-
-  .selector--draggable .selector__block {
-    background-color: #FFF;
-  }
-
-  .ui-widget-content .selector:hover {
-    background-image: repeating-linear-gradient(45deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 5px, rgba(0, 0, 0, .2) 5px, rgba(0, 0, 0, 0.2) 10px);
-  }
-
-  .ui-draggable:active,
-  .ui-draggable-dragging {
-    overflow: visible;
-    z-index: 2;
-  }
-
-  .ui-draggable .selector:active,
-  .ui-draggable-dragging .selector {
-    transform: scale(1.03);
-    box-shadow: 0 0 150px rgba(0, 0, 0, .2);
-    animation: dashed-border-spinner 10s linear infinite;
-  }
-
-  .dragging-started .selector, .dragging-started .selector:active {
-    opacity: 0.4;
-    background-image: none;
-    box-shadow: none;
-  }
-</style>
-
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/plugins/selector-draggable.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script>
@@ -70,32 +21,9 @@ permalink: /drag
 
 
 <div class="ui-widget-content">
-
-  <div class="selector selector--expanded selector--draggable">
-    <!--<div class="selector__itemSeperator selector__itemSeperator--hasLabel h6"></div>-->
-    <div class="selector__item JS_selectorItem--active selector__item--selected">
-      <div class="selector__block">
-        <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-        <div class="selector__blockPart selector__blockPart--label">4362</div>
-        <div class="selector__blockSeperator"></div>
-        <div class="selector__blockPart selector__blockPart--field">Bulk update speed regressed in 282.0</div>
-      </div>
-    </div>
-  </div>
-
+  {% include components/selector.html selectorData="#0BDA51,,4362,Bulk update speed regressed in 282" singleselect="true" expanded="true" draggable="true" readonly="true" selectedIndexes="1" %}
 </div>
 
 <div class="ui-widget-content">
-
-  <div class="selector selector--expanded selector--draggable">
-    <div class="selector__item JS_selectorItem--active selector__item--selected">
-      <div class="selector__block">
-        <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
-        <div class="selector__blockPart selector__blockPart--label">7654</div>
-        <div class="selector__blockSeperator"></div>
-        <div class="selector__blockPart selector__blockPart--field">Add indicators in import/export</div>
-      </div>
-    </div>
-  </div>
-
+  {% include components/selector.html selectorData="#00BFFF,,7654,Add indicators in import/export" singleselect="true" expanded="true" draggable="true" readonly="true" selectedIndexes="1" %}
 </div>
