add dark theme and add new header styles in future mockup

--- a/pages/pmx-future.html
+++ b/pages/pmx-future.html
@@ -15,15 +15,17 @@ permalink: /future
   </div>
 
   <main class="container-master">
-    <header class="app-header px-4 py-2">
+    <header class="app-header px-8 py-2">
       {% include blocks/app-header-future.html %}
     </header>
 
-    {% include blocks/breadcrumbs.html %}
+    <div class="mx-8">
+      {% include blocks/breadcrumbs.html %}
+    </div>
 
-    <div class="mx-4">
+    <div class="">
       <div class="sticky-header">
-        {% include blocks/item-header.html %}
+        {% include blocks/item-header-future.html %}
       </div>
 
       <div class="py-4 clearfix">
