--- a/pages/pmx-present.html
+++ b/pages/pmx-present.html
@@ -22,7 +22,11 @@ permalink: /present
   {% include blocks/old-pmx-tabline.html %}
 
   <div style="background-color: #4692C3;" class="py-2 bg-blue-light">
-    {% include blocks/breadcrumbs.html %}
+
+    <div class="mx-4">
+      {% include blocks/breadcrumbs.html %}
+    </div>
+    
     {% include blocks/old-pmx-item-detail.html %}
 
   </div>
