--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -289,20 +289,69 @@ permalink: /selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/2 p-8 overflow-hidden">
 
-    <h2 class="mb-8">Buttons</h2>
+    <h2 class="mb-8">Button configurations</h2>
 
-    <!-- Button -->
-    <div class="btns my-4">
-      <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
-      <div class="inline align-baseline mx-1">or</div>
-      <button class="btn"><span>forget me tomorrow</span></button>
+    <!-- Field -->
+    <div class="field field--not-empty">
+      <div class="field__label">Button</div>
+      <div class="field__data">
+        <div class="field__value">
+          {% include components/button.html title="Keep me in for 2 weeks" %}
+        </div>
+      </div>
+    </div>
+    <!-- Field -->
+    <div class="field field--not-empty">
+      <div class="field__label">Button - go</div>
+      <div class="field__data">
+        <div class="field__value">
+          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
+        </div>
+      </div>
     </div>
 
-    <!-- Button -->
-    <div class="btns my-4">
-      <button class="btn btn--go"><span>Keep me in for 2 weeks</span></button>
-      <div class="inline align-baseline mx-1">or</div>
-      <button class="btn btn--naked"><span>forget me tomorrow</span></button>
+    <!-- Field -->
+    <div class="field field--not-empty">
+      <div class="field__label">Button - naked</div>
+      <div class="field__data">
+        <div class="field__value">
+          {% include components/button.html title="Keep me in for 2 weeks" naked="true"%}
+        </div>
+      </div>
+    </div>
+
+    <!-- Field -->
+    <div class="field field--not-empty">
+      <div class="field__label">Button - drop</div>
+      <div class="field__data">
+        <div class="field__value">
+          {% include components/button.html title="Keep me in for 2 weeks" drop="true"%}
+        </div>
+      </div>
+    </div>
+
+    <!-- Field -->
+    <div class="field field--not-empty">
+      <div class="field__label">Buttons - aligned text in the middle</div>
+      <div class="field__data">
+        <div class="field__value">
+          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
+          {% include components/button-aligned-text.html title="or" %}
+          {% include components/button.html title="forget me tomorrow"%}
+        </div>
+      </div>
+    </div>
+
+    <!-- Field -->
+    <div class="field field--not-empty">
+      <div class="field__label">Buttons - aligned text in the middle 2</div>
+      <div class="field__data">
+        <div class="field__value">
+          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
+          {% include components/button-aligned-text.html title="or" %}
+          {% include components/button.html title="forget me tomorrow" naked="true"%}
+        </div>
+      </div>
     </div>
 
   </div>
